:sparkles: 커스텀 화면 HTML 구조 잡기
- heart 이미지 추가
- index.html 수정
- .gitignore .DS_Store 무시

--- a/index.html
+++ b/index.html
@@ -6,8 +6,41 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <div id="intro">
+      <h1>Ghost Rain Game</h1>
+      <p>Avoid the ghosts coming down!</p>
+    </div>
+
+    <div id="info">
+      <p>
+        Life : 
+        <img src="./images/heart-16x16.png" alt="Icon not found.">
+        <img src="./images/heart-16x16.png" alt="Icon not found.">
+        <img src="./images/heart-16x16.png" alt="Icon not found.">
+      </p>
+      <p>Play time :</p>
+      <p>Points :</span>
+    </div>
+
     <div id="bg">
-      <span id="hero"></span>
+      <!-- <span id="hero"></span> -->
+      <img src="./images/bg.png" alt="Image not found." />
+    </div>
+
+    <button type="button" onclick="alert('Start!!')">Game Start!</button>
+
+    <div id="rank">
+      <h2>Ranking</h2>
+      <table>
+        <th>Rank</th>
+        <th>Play time</th>
+        <th>Points</th>
+        <tr>
+          <td>1</td>
+          <td>00:00</td>
+          <td>10</td>
+        </tr>
+      </table>
     </div>
 
     <script src="js/settings.js"></script>
