:sparkles: hero 위치 및 방향 js 조작 테스트

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <section class="container-main">
       <div id="bg">
-        <span id="hero" class="stop"></span>
+        <span id="hero"></span>
         <!-- <img src="./images/bg.png" alt="Image not found." /> -->
       </div>
       <button
